<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:padding="20dp"
    >


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="189dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:src="@drawable/m" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textColor="@color/Orange"
        android:textSize="55sp" />

    <Button
        android:id="@+id/hesabim_var"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="125dp"
        android:text="@string/i_have_account"
        android:background="@drawable/buttonshape"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/yeni_hesap_olustur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="53dp"
        android:background="@drawable/buttonshape"
        android:text="@string/create_new_account"
        android:textColor="@color/White"/>
</RelativeLayout>