<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <include layout="@layout/app_bar_layout"
        android:id="@+id/actionbar_login">
    </include>

    <TextView
        android:id="@+id/giris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionbar_login"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/holo_red_dark"
        android:text="@string/login_with_your_account"
        android:textSize="20dp" />


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:src="@drawable/m"></ImageView>

    <TextView
        android:id="@+id/email02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/giris"
        android:layout_marginStart="20dp"
        android:layout_marginTop="158dp"
        android:text="Email"
        android:textColor="@android:color/black"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/email23"


        android:layout_width="345dp"
        android:layout_height="wrap_content"

        android:layout_below="@id/email02"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/email"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/parola"

        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email23"
        android:layout_marginStart="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="10dp"
        android:hint="parola"
        android:inputType="textPassword"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="204dp"
        android:background="@drawable/buttonshape"
        android:text="@string/gir"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="126dp"
        android:background="@drawable/buttonshape"
        android:text="@string/kayıt"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="82dp"
        android:textAlignment="center"
        android:text="Şifremi Unuttum"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>



</RelativeLayout>